--- a/editor/TODO
+++ b/editor/TODO
@@ -1,4 +1,5 @@
-* Mirror and Mirror Angle needs to be saved in and retrived from xml
-* Checking difficulty of introducing mirror feature in Multi shape
-* Checking possibility to merging mirror objects
+
+===Distant Future TODOs============================================
+* Introducing mirror feature in Multi shape
+* Ability to merge mirror objects
 * Mirror needs to be saved in "form", undo-redo "task"
