--- a/android/MotionPicture/app/src/main/res/values/strings.xml
+++ b/android/MotionPicture/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MotionPicture</string>
     <string name="test_image">test image</string>
+    <string name="single_bitmap_rendering">Single Bitmap Rendering</string>
 </resources>
