point insertion in curve is being modified.

--- a/editor/TODO
+++ b/editor/TODO
@@ -1,3 +1,7 @@
+Known Bugs
+===================================================================
+* After changing canvas-size, linear and gradient colors can not be editing by double clicking.
+When double clicked, an extra node point is inserted.
 
 ===Distant Future TODOs============================================
 * Introducing mirror feature in Multi shape
